@@ -4455,11 +4455,11 @@ gtk_tree_view_leave_notify (GtkWidget        *widget,
 {
   GtkTreeView *tree_view;
 
-  g_return_val_if_fail (GTK_IS_TREE_VIEW (widget), FALSE);
+  tree_view = GTK_TREE_VIEW (widget);
+  tree_view->priv->pressed_button = -1;
 
   if (event->mode == GDK_CROSSING_GRAB)
     return TRUE;
-  tree_view = GTK_TREE_VIEW (widget);
 
   if (tree_view->priv->prelight_node)
     _gtk_tree_view_queue_draw_node (tree_view,
@@ -9175,6 +9175,7 @@ gtk_tree_view_adjustment_changed (GtkAdjustment *adjustment,
 		}
 	    }
 	}
+      g_print ("scroll win %d\n", dy);
       gdk_window_scroll (tree_view->priv->bin_window, 0, dy);
 
       /* update our dy and top_row */
